[package]
name = "emote-psb"
version = "0.4.1"
authors = ["storycraft <storycraft@pancake.sh>"]
description = "E-mote PSB file"
edition = "2018"
license = "MIT"
repository = "https://github.com/storycraft/emote-psb-rs"
keywords = ["e-mote", "psb", "scn", "mdf"]

[features]
default = []

[dependencies]
flate2 = "1.0"
byteorder = "1.3.4"
encoding = "0.2.33"
adler = "1.0.1"
itertools = "0.10.0"

serde = { version = "1.0.0", features = ["derive"], optional = true }
