[package]
name = "emote-psb"
version = "0.5.0"
authors = ["storycraft <storycraft@pancake.sh>"]
description = "E-mote PSB file"
edition = "2024"
license = "MIT"
repository = "https://github.com/storycraft/emote-psb-rs"
keywords = ["e-mote", "psb", "scn", "mdf"]

[features]
default = []

[dependencies]
adler = "1.0.1"
serde = { version = "1.0.0", features = ["derive"], optional = true }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["io-util"] }
async-compression = { version = "0.4.41", features = ["tokio", "zlib"] }
pin-project = "1.1.10"
derive_more = { version = "2.1.1", features = ["from"] }
extend = "1.2.0"
async-stream = "0.3.6"
futures-core = "0.3.32"
futures-util = "0.3.32"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
mimalloc = "*"
