[package]
name = "emote-psb"
version = "0.5.0"
authors = ["storycraft <storycraft@pancake.sh>"]
description = "E-mote PSB file"
edition = "2024"
license = "MIT"
repository = "https://github.com/storycraft/emote-psb-rs"
keywords = ["e-mote", "psb", "scn", "mdf"]

[dependencies]
adler2 = "2.0.1"
serde = { version = "1.0.0", features = ["derive"] }
thiserror = "2.0.18"
derive_more = { version = "2.1.1", features = ["from"] }
flate2 = "1.1.9"
byteorder = "1.5.0"
scopeguard = "1.2.0"
indexmap = "2.13.0"
smol_str = "0.3.6"
